--- a/CommonLibProject/CommonUtils/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="notice">提示</string>
     <string name="confirm">确定</string>
     <string name="cancel">取消</string>
+    <string name="press_twice_notify_text">两秒内再次按下退出</string>
 </resources>
