--- a/CommonLibProject/CommonUtils/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/strings.xml
@@ -7,10 +7,11 @@
     <string name="loading_pager_unknown_error">未知错误...</string>
     <string name="loading_pager_no_search_content">没有搜索到任何东西...</string>
     <string name="limit_text_notify_text_when_over_rang_limit_count">您输入的字符已经超出%1$d的限制</string>
-    <string name="pulling">下拉进行刷新</string>
+    <string name="pulling">拉动进行刷新</string>
     <string name="release_to_refresh">释放立即刷新</string>
     <string name="last_refresh_time">上次刷新于: %1$s</string>
     <string name="refreshing">正在刷新</string>
+    <string name="refresh_at_first_time">第一次拉动刷新</string>
     <string name="jd_make_your_shopping_faster">京西,让购物更快捷</string>
     <string name="open_camera_fail">相机打开失败,后台有其它进程正在使用相机</string>
     <string name="logcat">Logcat</string>
