--- a/CommonLibProject/CommonUtils/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">CommonUtils</string>
+    <string name="test">test...</string>
     <string name="loading_pager_loading">加载中...</string>
     <string name="loading_pager_net_unavailable">没有网络...</string>
     <string name="loading_pager_net_timeout">网络链接超时...</string>
