更新Scheme跳转相关

--- a/CommonLibProject/CommonUtils/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="confirm">确定</string>
     <string name="cancel">取消</string>
     <string name="press_twice_notify_text">两秒内再次按下退出</string>
+    <string name="invalid_scheme_jump_code">无效的跳转码</string>
+    <string name="invalid_scheme_jump_args">无效的跳转参数</string>
+    <string name="invalid_scheme_jump_prefix">无效的跳转前缀</string>
+    <string name="invalid_scheme_jump_host">无效的跳转主机</string>
+    <string name="invalid_scheme_jump_path">无效的跳转地址</string>
 </resources>
