--- a/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
 
     <string name="warning">警告</string>
     <string name="exit">退出</string>
+    <string name="just_test">测试</string>
+    <string name="just_stop_test">停止测试</string>
     <string name="you_do_not_give_the_permission">您没有基于以下权限,App无法正常运行,请重新打开App或者在系统设置中给予响应的权限. \n %1$s</string>
 
     <!-- ToolBar's Action Button -->
@@ -288,6 +290,25 @@
     <string name="android_call_js">Android调用JS演示</string>
     <string name="demo_link">https://www.baidu.com</string>
     <!-- WebView相关 -->
+    
+    <!-- 设计模式相关 -->
+    <string name="design_mode">设计模式</string>
+    <string name="singleton">单例模式</string>
+    <string name="singleton_mode_features_title">单例模式特性</string>
+    <string name="observer_mode_features_title">观察者模式特性</string>
+    <string name="clear_instance">清空mInstance</string>
+    <string name="lazy_mode">懒汉式</string>
+    <string name="hungry_mode">饿汉式</string>
+    <string name="observer">观察者模式</string>
+    <string name="clear_observers">清空观察者</string>
+    <string name="builder">构建模式</string>
+    <string name="factory_mode">工厂模式</string>
+    <string name="simple_factory_mode">简单工厂模式</string>
+    <string name="abstract_factory_mode">抽象工厂模式</string>
+    <string name="benz">奔驰</string>
+    <string name="bmw">宝马</string>
+    <string name="audi">奥迪</string>
+    <!-- 设计模式相关 -->
 
     <!-- ListView & GridView相关 -->
     <string name="list_view_and_grid_view">List View &amp; Grid View</string>
@@ -427,16 +448,6 @@
     <!-- 视频控制器相关 -->
 
 
-    <string name="test">很早以前，大运河边住着一个叫阿牛的农民。阿牛家里很穷， 他七岁就没了父亲，靠母亲纺织度日。阿牛母亲因子幼丧夫，生活艰辛，经常哭泣，把眼睛都哭烂了。
-
-　　	阿牛长到13岁，他对母亲说：“妈妈，你眼睛不好，今后不要再日夜纺纱织布，我已经长大，我能养活你！”于是他就去张财主家做小长工，母子俩苦度光阴。 两年后，母亲的眼病越来越严重，不久竟双目失明了。 阿牛想，母亲的眼睛是为我而盲，无论如何也要医好她的眼睛。 他一边给财主做工，一边起早摸黑开荒种菜，靠卖菜换些钱给母亲求医买药。也不知吃了多少药， 母亲的眼病仍不见好转。一天夜里，阿牛做了一个梦，梦见一个漂亮的姑娘来帮他种菜，并告诉他说：“沿运河往西数十里，有个天花荡，荡中有一株白色的菊花，能治眼病。这花要九月初九重阳节才开放，到时候你用这花煎汤给你母亲吃，定能治好她的眼病”。重阳节那天，阿牛带了干粮，去天花荡寻找白菊花。原来这是一个长满野草的荒荡，人称天荒荡。他在那里找了很久，只有黄菊花，就是不见白菊花，一直找到下午，才在草荡中一个小土墩旁的草丛中找到一株白色的野菊花。这株白菊花长得很特别，一梗九分枝，眼前只开一朵花，其余八朵含苞待放。阿牛将这株白菊花连根带土挖了回来，移种在自家屋旁。经他浇水护理，不久八枚花朵也陆续绽开，又香又好看。于是他每天采下一朵白菊煎汤给母亲服用。当吃完了第七朵菊花之后，阿牛母亲的眼睛便开始复明了。
-
-　　	白菊花能治眼病的消息很快传了出去，村上人纷纷前来观看这株不寻常的野菊花。这一消息也传到了张财主那里。张财主将阿牛叫去，命他立即将那株白菊移栽到张家花园里。阿牛当然不肯。张财主便派了几个手下人赶到阿牛家强抢那株白菊花，因双方争夺，结果菊花被折断，他们才扬长而去。阿牛见这株为母亲治好眼疾的白菊横遭强暴，十分伤心，坐在被折断的白菊旁哭到天黑，直至深夜仍不肯离开。半夜之后，他朦胧的泪眼前猛然一亮，上次梦见的那位漂亮姑娘突然来到他的身边。姑娘劝他说：“阿牛，你的孝心已经有了好报，不要伤心，回去睡吧！”阿牛说：“这株菊花救过我的亲人，它被折死，叫我怎么活？”姑娘说：“这菊花梗子虽然断了，但根还在，她没有死，你只要将根挖出来，移植到另一个地方，就会长出白菊花。”阿牛问道：“姑娘，你是何人，请告知，我要好好谢你。”姑娘说：“我是天上的菊花仙子，特来助你，无需报答，你只要按照一首《种菊谣》去做，白菊花定会种活。”接着菊花仙子念道：“三分四平头，五月水淋头，六月甩料头，七八捂墩头，九月滚绣球。”念完就不见了。
-
-菊花仙子
-
-　　	阿牛回到屋里仔细推敲菊花仙子的《种菊谣》，终于悟出了其中意思：种白菊要在三月移植，四月掐头，五月多浇水，六月勤施肥，七月八月护好根，这样九月就能开出绣球状的菊花。阿牛根据菊花仙子的指点去做了，后来菊花老根上果然爆出了不少枝条。他又剪下这些枝条去扦插，再按《种菊谣》说的去栽培，第二年九月初九重阳节便开出了一朵朵芬芳四溢的白菊花。后来阿牛将种菊的技能教给了村上的穷百姓，这一带种白菊花的人就越来越多了。因为阿牛是九月初九找到这株白菊花的，所以后来人们就将九月九称作菊花节，并形成了赏菊花、吃菊花茶、饮菊花酒等风俗。</string>
-
     <string name="thread_pool">线程池构造函数中的参数意义： coreThreadCount: 线程核心数,线程池内维护的线程数。
         maxThreadCount: 当线程池内的线程超过coreThreadCount,缓存队列也满了之后,再次提交Runnable,线程池会开启maxThreadCount - coreThreadPool个线程去执行Runnable。
         keepAliveTime: 当额外开启的线程执行完毕后，这些线程的缓存时间。
@@ -462,4 +473,6 @@
         ScheduledThreadPool: 周期性线程池，核心为nThread，最大为nThread，缓存时间为0，队列为DelayedWorkQueue，拒绝策略为AbortPolicy。可以周期性的执行Runnable。
     </string>
 
+    <string name="singleton_mode_features">单例设计模式特性: 单例设计模式保证从进程启动到进程结束之间，一个类在堆内存中只有一个实例。</string>
+    <string name="observer_mode_features">观察者模式特性: 被观察者维护数据，观察者向被观察者注册观察器，被观察者维护观察器，当数据改变时，通知所有观察者数据改变。</string>
 </resources>
