--- a/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
@@ -326,6 +326,17 @@
     <string name="bmw">宝马</string>
     <string name="audi">奥迪</string>
     <!-- 设计模式相关 -->
+    
+    <!-- 动画相关 -->
+    <string name="about_animation">动画相关</string>
+    <string name="tween_animation">补间动画</string>
+    <string name="object_animation">属性动画</string>
+    <string name="frame_animation">帧动画</string>
+    <string name="alpha">透明</string>
+    <string name="rotate">旋转</string>
+    <string name="transate">位移</string>
+    <string name="scale">缩放</string>
+    <!-- 动画相关 -->
 
     <!-- ListView & GridView相关 -->
     <string name="list_view_and_grid_view">List View &amp; Grid View</string>
