--- a/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
+++ b/CommonLibProject/CommonUtilsDemo/src/main/res/values/strings.xml
@@ -340,6 +340,36 @@
     <string name="scale">缩放</string>
     <!-- 动画相关 -->
 
+    <!-- 布局相关 -->
+    <string name="view_group">布局</string>
+    <string name="linear_layout">线性布局</string>
+    <string name="relative_layout">相对布局</string>
+    <string name="frame_layout">帧布局</string>
+    <string name="absolute_layout">绝对布局</string>
+    <string name="table_layout">表格布局</string>
+    <string name="grid_layout">Grid布局</string>
+    <string name="constraint_layout">约束布局</string>
+    <string name="one_weight_with_0dp_width">1 weight 0dp width</string>
+    <string name="wrap_content_width">  wrap_content_width  </string>
+    <string name="weight_formula">weight 计算公式</string>
+    <string name="weight_formula_details">父窗体剩余宽度/高度 * weightSum / weight</string>
+    <string name="align_top">align_top</string>
+    <string name="align_bottom">align_bottom</string>
+    <string name="above">above</string>
+    <string name="below">below</string>
+    <string name="to_top_of">to_top_of</string>
+    <string name="to_bottom_of">to_bottom_of</string>
+    <string name="to_left_of">to_left_of</string>
+    <string name="to_right_of">to_right_of</string>
+    <string name="align_left">align_left</string>
+    <string name="align_right">align_right</string>
+    <string name="center_in_parent">center_in_parent</string>
+    <string name="align_parent_top">align_parent_top</string>
+    <string name="align_parent_bottom">align_parent_bottom</string>
+    <string name="align_parent_left">align_parent_left</string>
+    <string name="align_parent_right">align_parent_right</string>
+    <!-- 布局相关 -->
+
     <!-- ListView & GridView相关 -->
     <string name="list_view_and_grid_view">List View &amp; Grid View</string>
     <string name="list_item_title">This is a title.</string>
